examples/test/testpolicy13734.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13734
  namespace: namespace32
spec:
  podSelector:
    matchLabels:
      key43: value13
      key35: value29
      key42: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value2
      podSelector:
        matchLabels:
          key5: value3
          key39: value19
          key19: value29
